@@ -1426,6 +1426,7 @@ is $@->message, __x(
 
 ##############################################################################
 # Try reworking a change.
+can_ok $plan, 'rework';
 ok my $rev_change = $plan->rework( name => 'you' ), 'Rework change "you"';
 isa_ok $rev_change, 'App::Sqitch::Plan::Change';
 is $rev_change->name, 'you', 'Reworked change should be "you"';
@@ -1436,7 +1437,6 @@ is_deeply [ map { $_->format_name } $orig->rework_tags ],
     [qw(@bar)], 'And it should have the one rework tag';
 is $orig->deploy_file, $sqitch->deploy_dir->file('you@bar.sql'),
     'The original file should now be named you@bar.sql';
-can_ok $plan, 'rework';
 is $rev_change->as_string,
     'you [you@bar] ' . $rev_change->timestamp->as_string . ' '
     . $rev_change->format_planner,
